# elements_v2/urls.py
@@ -1,19 +1,3 @@
-"""elements_v2 URL Configuration
-
-The `urlpatterns` list routes URLs to views. For more information please see:
-    https://docs.djangoproject.com/en/2.2/topics/http/urls/
-Examples:
-Function views
-    1. Add an import:  from my_app import views
-    2. Add a URL to urlpatterns:  path('', views.home, name='home')
-Class-based views
-    1. Add an import:  from other_app.views import Home
-    2. Add a URL to urlpatterns:  path('', Home.as_view(), name='home')
-Including another URLconf
-    1. Import the include() function: from django.urls import include, path
-    2. Add a URL to urlpatterns:  path('blog/', include('blog.urls'))
-"""
-from allauth.account.views import confirm_email
 from django.contrib import admin
 from django.urls import path, include
 from django.views.generic import TemplateView
@@ -24,19 +8,21 @@ from django.conf.urls.static import static
 
 urlpatterns = [
     path('admin/', admin.site.urls),
-    path('openapi', get_schema_view(
-        title="Your Project",
-        description="API for all things …"
-    ), name='openapi-schema'),
     path('swagger-ui/', TemplateView.as_view(
         template_name='swagger-ui.html',
         extra_context={'schema_url': 'openapi-schema'}
     ), name='swagger-ui'),
+    path('redoc/', TemplateView.as_view(
+        template_name='redoc.html',
+        extra_context={'schema_url': 'openapi-schema'}
+    ), name='redoc'),
     path('api/auth/', include('rest_auth.urls')),
-    # path('api/', include('rest_framework.urls')),
-    # path('user/', include('user.urls')),
+    path('api/', include('user.urls')),
     path('api/auth/registration/', include('rest_auth.registration.urls')),
-    # path('api-auth/registration/account-confirm-email/<str:key>', confirm_email, name='account_confirm_email'),
-    # path(r'api/auth/login/', 'rest_framework_jwt.views.obtain_jwt_token'),
+    # path('openapi', get_schema_view(
+    #     title="Your Project",
+    #     description="API for all things …"
+    # ), name='openapi-schema'),
 ]
 urlpatterns += static(settings.STATIC_URL, document_root=settings.STATICFILES_DIRS)
+urlpatterns += static(settings.MEDIA_URL, document_root=settings.MEDIA_ROOT)
